# pfsense-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/pfsense_mcp/: __init__.py  arp.py  config.py  dhcp.py  firewall_inspection.py  firewall_states.py  server.py  table.py  troubleshooting.py  webgui.py
tests/: support.py  test_arp.py  test_config.py  test_dhcp.py  test_firewall_inspection.py  test_firewall_states.py  test_server_tools.py  test_troubleshooting.py  test_webgui_auth.py  test_webgui_client.py
